# guard-rail

./: .gitignore  package-lock.json  package.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: architecture.tsx  capabilities.tsx  footer.tsx  hero.tsx  icons.tsx  nav.tsx  pricing.tsx  problem.tsx  terminal-animation.tsx  trust.tsx
docs/superpowers/plans/: 2026-04-04-backend-stage1.md  2026-04-04-landing-page.md
docs/superpowers/specs/: 2026-04-04-backend-stage1-design.md  2026-04-04-landing-page-design.md
guard-rail-engine/: Cargo.toml
guard-rail-engine/config/: config.yaml  routes.yaml
guard-rail-engine/config/policies/: security.yaml
guard-rail-engine/src/: config.rs  lib.rs  logging.rs  main.rs  reload.rs  routes.rs
guard-rail-engine/src/policy/: conditions.rs  engine.rs  mod.rs
guard-rail-engine/src/proxy/: forward.rs  mod.rs  response.rs
guard-rail-engine/tests/: integration_test.rs
