[package]
name = "guard-rail-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "guard-rail-engine"
path = "src/main.rs"

[lib]
name = "guard_rail_engine"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonpath-rust = "0.7"
regex = "1"
notify = { version = "7", features = ["macos_fsevent"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["limit"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
glob-match = "0.2"
bytes = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
